--- a/index.html
+++ b/index.html
@@ -2,23 +2,21 @@
 <html lang="de">
 <head>
 <meta charset="UTF-8" />
-<title>Shader mit echten Orbit Controls (gedämpft)</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Shader mit Orbit Controls (Maus & Touch)</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <style>
   html, body {
     margin: 0; padding: 0; overflow: hidden; background: black;
     height: 100%;
     user-select: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    touch-action: none; /* verhindert standard scroll/pinch */
+    touch-action: none;
   }
   canvas {
     width: 100vw;
     height: 100vh;
     display: block;
     cursor: grab;
+    touch-action: none;
   }
   canvas:active {
     cursor: grabbing;
@@ -28,6 +26,7 @@
 <body>
 <canvas id="glcanvas"></canvas>
 
+<!-- Vertex Shader -->
 <script type="x-shader/x-vertex">
 attribute vec3 position;
 void main() {
@@ -35,6 +34,7 @@ void main() {
 }
 </script>
 
+<!-- Fragment Shader -->
 <script type="x-shader/x-fragment">
 precision highp float;
 uniform vec2 resolution;
@@ -42,65 +42,58 @@ uniform float time;
 uniform vec3 camPos;
 uniform vec3 camTarget;
 
-mat3 rotationY(float angle) {
-  float s = sin(angle), c = cos(angle);
-  return mat3(
-    c, 0.0, -s,
-    0.0, 1.0, 0.0,
-    s, 0.0, c
-  );
+mat3 rotationY(float a) {
+  float s = sin(a), c = cos(a);
+  return mat3(c,0.0,-s, 0.0,1.0,0.0, s,0.0,c);
 }
-
-mat3 rotationZ(float angle) {
-  float s = sin(angle), c = cos(angle);
-  return mat3(
-    c, s, 0.0,
-   -s, c, 0.0,
-    0.0, 0.0, 1.0
-  );
+mat3 rotationZ(float a) {
+  float s = sin(a), c = cos(a);
+  return mat3(c,s,0.0, -s,c,0.0, 0.0,0.0,1.0);
 }
-
 float fBox(vec3 p, vec3 b) {
   vec3 d = abs(p) - b;
-  return length(max(d, 0.0)) + min(max(d.x, max(d.y, d.z)), 0.0);
+  return length(max(d,0.0)) + min(max(d.x,max(d.y,d.z)),0.0);
 }
+float scene(vec3 p, float time) {
+  // Unterschiedliche Animationsgeschwindigkeiten und Amplituden
+  float baseX = 0.3 + 0.07 * sin(time * 0.15);
+  float baseY = 0.3 + 0.05 * cos(time * 0.12);
+  float baseZ = 0.3 + 0.06 * sin(time * 0.09);
+  float smallX = 0.1 + 0.02 * sin(time * 0.1 + 1.0);
+  float smallY = 0.1 + 0.025 * cos(time * 0.13 + 2.0);
+  float smallZ = 0.1 + 0.03 * sin(time * 0.17);
+  float sphereRadius = 0.4 + 0.05 * sin(time * 0.08 + 1.5);
+  float translation = 0.15 * sin(time * 0.07);
 
-float scene(vec3 p) {
-  float s = 0.3;
-  vec3 pos = p;
-  float value = 1.0;
-
+  p.z += translation;
+  float v = 1.0;
   for (int i = 0; i < 6; i++) {
-    vec2 absXY = abs(pos.xy) - value;
-    pos = vec3(absXY, pos.z);
-    pos = rotationY(time * 0.2) * pos;
-    pos = rotationZ(time * 0.15) * pos;
-    value *= 0.9;
+    vec2 absXY = abs(p.xy) - v;
+    p = vec3(absXY, p.z);
+    p = rotationY(time * (0.05 + 0.03 * float(i))) * p;
+    p = rotationZ(time * (0.035 + 0.02 * float(i))) * p;
+    v *= 0.9;
   }
 
-  float box1 = fBox(pos, vec3(0.3));
-  float box2 = fBox(pos, vec3(0.1));
+  float box1 = fBox(p, vec3(baseX, baseY, baseZ));
+  float box2 = fBox(p, vec3(smallX, smallY, smallZ));
   float d = -box1;
   d = min(d, box2);
-
-  float sphere = length(pos) - 0.4;
+  float sphere = length(p) - sphereRadius;
   return max(d, sphere);
 }
-
-vec3 getNormal(vec3 p) {
+vec3 getNormal(vec3 p, float time) {
   float e = 0.001;
-  vec2 h = vec2(e, 0.0);
+  vec2 h = vec2(e,0.0);
   return normalize(vec3(
-    scene(p + h.xyy) - scene(p - h.xyy),
-    scene(p + h.yxy) - scene(p - h.yxy),
-    scene(p + h.yyx) - scene(p - h.yyx)
+    scene(p + h.xyy, time) - scene(p - h.xyy, time),
+    scene(p + h.yxy, time) - scene(p - h.yxy, time),
+    scene(p + h.yyx, time) - scene(p - h.yyx, time)
   ));
 }
-
 void main() {
   vec2 uv = (gl_FragCoord.xy / resolution) * 2.0 - 1.0;
   uv.x *= resolution.x / resolution.y;
-
   vec3 ro = camPos;
   vec3 ta = camTarget;
   vec3 f = normalize(ta - ro);
@@ -111,43 +104,40 @@ void main() {
   float t = 0.0;
   float d;
   bool hit = false;
-  for(int i = 0; i < 100; i++) {
+  for(int i=0; i<100; i++) {
     vec3 p = ro + rd * t;
-    d = scene(p);
-    if (d < 0.001) {
-      hit = true;
-      break;
-    }
-    if (t > 20.0) break;
+    d = scene(p, time);
+    if(d < 0.001) { hit = true; break; }
+    if(t > 20.0) break;
     t += d;
   }
 
   vec3 col = vec3(0.0);
-  if (hit) {
+  if(hit) {
     vec3 p = ro + rd * t;
-    vec3 n = getNormal(p);
+    vec3 n = getNormal(p, time);
     vec3 lightDir = normalize(vec3(0.7, 1.0, 0.8));
     float diff = clamp(dot(n, lightDir), 0.0, 1.0);
     float spec = pow(clamp(dot(reflect(-lightDir, n), -rd), 0.0, 1.0), 16.0);
-    col = vec3(0.8, 0.9, 1.0) * diff + vec3(1.0) * spec * 0.4;
+    col = vec3(0.8,0.9,1.0) * diff + vec3(1.0) * spec * 0.4;
     col = pow(col, vec3(0.4545));
   }
-
   gl_FragColor = vec4(col, 1.0);
 }
 </script>
 
+<!-- JavaScript -->
 <script>
-const canvas = document.getElementById('glcanvas');
-const gl = canvas.getContext('webgl');
-if (!gl) alert('WebGL nicht unterstützt');
+const canvas = document.getElementById("glcanvas");
+const gl = canvas.getContext("webgl");
+if (!gl) alert("WebGL nicht unterstützt");
 
 function resize() {
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
   gl.viewport(0, 0, canvas.width, canvas.height);
 }
-window.addEventListener('resize', resize);
+window.addEventListener("resize", resize);
 resize();
 
 function compileShader(type, source) {
@@ -191,198 +181,117 @@ gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
 gl.enableVertexAttribArray(posLoc);
 gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
 
-// --- Orbit Controls ---
-
+// Kamera
 let theta = Math.PI/4;
 let phi = Math.PI/4;
 let radius = 4.0;
-let target = [0,0,0];
+let target = [0, 0, 0];
 
-let targetTheta = theta;
-let targetPhi = phi;
-let targetRadius = radius;
-let targetPos = [...target];
+function subtractVectors(a,b){ return [a[0]-b[0], a[1]-b[1], a[2]-b[2]]; }
+function addVectors(a,b){ return [a[0]+b[0], a[1]+b[1], a[2]+b[2]]; }
+function scaleVector(v,s){ return [v[0]*s, v[1]*s, v[2]*s]; }
+function lengthVector(v){ return Math.sqrt(v[0]**2 + v[1]**2 + v[2]**2); }
+function normalize(v){ let l = lengthVector(v); return l > 0.00001 ? scaleVector(v, 1/l) : [0,0,0]; }
+function cross(a,b){ return [a[1]*b[2]-a[2]*b[1], a[2]*b[0]-a[0]*b[2], a[0]*b[1]-a[1]*b[0]]; }
+
+function getCamPos() {
+  let sinPhi = Math.sin(phi);
+  let x = radius * sinPhi * Math.sin(theta);
+  let y = radius * Math.cos(phi);
+  let z = radius * sinPhi * Math.cos(theta);
+  return addVectors(target, [x, y, z]);
+}
 
 let isDragging = false;
 let isPanning = false;
 let lastX = 0, lastY = 0;
 
-let touchDistStart = 0;
-let touchRadiusStart = radius;
-
-canvas.addEventListener('mousedown', (e) => {
+canvas.addEventListener("mousedown", e => {
   isDragging = true;
+  isPanning = e.button === 2 || e.shiftKey;
   lastX = e.clientX;
   lastY = e.clientY;
-  isPanning = e.button === 2 || e.shiftKey;
-  e.preventDefault();
 });
-canvas.addEventListener('mouseup', () => {
-  isDragging = false;
-  isPanning = false;
-});
-canvas.addEventListener('mouseleave', () => {
-  isDragging = false;
-  isPanning = false;
-});
-canvas.addEventListener('mousemove', (e) => {
+canvas.addEventListener("mouseup", () => isDragging = false);
+canvas.addEventListener("mouseleave", () => isDragging = false);
+canvas.addEventListener("mousemove", e => {
   if (!isDragging) return;
   let dx = e.clientX - lastX;
   let dy = e.clientY - lastY;
   lastX = e.clientX;
   lastY = e.clientY;
-
   if (isPanning) {
-    const panSpeed = 0.005 * targetRadius;
-    let up = [0,1,0];
-    let camPos = getCamPos(targetTheta, targetPhi, targetRadius, targetPos);
-    let forward = normalize(subtractVectors(targetPos, camPos));
-    let right = normalize(cross(forward, up));
-    let camUp = normalize(cross(right, forward));
-    targetPos = addVectors(targetPos,
-      addVectors(
-        scaleVector(right, -dx * panSpeed),
-        scaleVector(camUp, dy * panSpeed)
-      )
+    const panSpeed = 0.005 * radius;
+    let forward = normalize(subtractVectors(target, getCamPos()));
+    let right = normalize(cross(forward, [0,1,0]));
+    let up = cross(right, forward);
+    target = addVectors(target,
+      addVectors(scaleVector(right, -dx * panSpeed), scaleVector(up, dy * panSpeed))
     );
   } else {
-    const orbitSpeed = 0.005;
-    targetTheta -= dx * orbitSpeed;
-    targetPhi -= dy * orbitSpeed;
-    const eps = 0.01;
-    targetPhi = Math.max(eps, Math.min(Math.PI - eps, targetPhi));
+    theta -= dx * 0.005;
+    phi -= dy * 0.005;
+    phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
   }
 });
-
-canvas.addEventListener('wheel', (e) => {
+canvas.addEventListener("wheel", e => {
   e.preventDefault();
-  const zoomSpeed = 0.0015;
-  targetRadius += e.deltaY * zoomSpeed;
-  targetRadius = Math.max(0.5, Math.min(20, targetRadius));
+  radius += e.deltaY * 0.0015;
+  radius = Math.max(0.5, Math.min(20, radius));
 });
+canvas.addEventListener("contextmenu", e => e.preventDefault());
 
-canvas.addEventListener('touchstart', (e) => {
+// Touch
+let touchMode = null;
+let touchStartDist = 0;
+canvas.addEventListener("touchstart", e => {
   if (e.touches.length === 1) {
-    isDragging = true;
-    isPanning = false;
+    touchMode = "rotate";
     lastX = e.touches[0].clientX;
     lastY = e.touches[0].clientY;
   } else if (e.touches.length === 2) {
-    isDragging = false;
-    isPanning = false;
+    touchMode = "zoom";
     let dx = e.touches[0].clientX - e.touches[1].clientX;
     let dy = e.touches[0].clientY - e.touches[1].clientY;
-    touchDistStart = Math.sqrt(dx*dx + dy*dy);
-    touchRadiusStart = targetRadius;
+    touchStartDist = Math.sqrt(dx * dx + dy * dy);
   }
 });
-canvas.addEventListener('touchmove', (e) => {
+canvas.addEventListener("touchmove", e => {
   e.preventDefault();
-  if (e.touches.length === 1 && isDragging) {
+  if (touchMode === "rotate" && e.touches.length === 1) {
     let dx = e.touches[0].clientX - lastX;
     let dy = e.touches[0].clientY - lastY;
     lastX = e.touches[0].clientX;
     lastY = e.touches[0].clientY;
-    const orbitSpeed = 0.005;
-    targetTheta -= dx * orbitSpeed;
-    targetPhi -= dy * orbitSpeed;
-    const eps = 0.01;
-    targetPhi = Math.max(eps, Math.min(Math.PI - eps, targetPhi));
-  } else if (e.touches.length === 2) {
+    theta -= dx * 0.005;
+    phi -= dy * 0.005;
+    phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
+  } else if (touchMode === "zoom" && e.touches.length === 2) {
     let dx = e.touches[0].clientX - e.touches[1].clientX;
     let dy = e.touches[0].clientY - e.touches[1].clientY;
-    let dist = Math.sqrt(dx*dx + dy*dy);
-    let zoomFactor = touchDistStart / dist;
-    targetRadius = touchRadiusStart * zoomFactor;
-    targetRadius = Math.max(0.5, Math.min(20, targetRadius));
+    let dist = Math.sqrt(dx * dx + dy * dy);
+    let delta = dist - touchStartDist;
+    radius -= delta * 0.01;
+    radius = Math.max(0.5, Math.min(20, radius));
+    touchStartDist = dist;
   }
 });
-canvas.addEventListener('touchend', (e) => {
-  if (e.touches.length === 0) {
-    isDragging = false;
-    isPanning = false;
-  }
-});
+canvas.addEventListener("touchend", () => touchMode = null);
 
-// Vektor-Hilfsfunktionen
-
-function subtractVectors(a,b) {
-  return [a[0]-b[0], a[1]-b[1], a[2]-b[2]];
-}
-function addVectors(a,b) {
-  return [a[0]+b[0], a[1]+b[1], a[2]+b[2]];
-}
-function scaleVector(v,s) {
-  return [v[0]*s, v[1]*s, v[2]*s];
-}
-function lengthVector(v) {
-  return Math.sqrt(v[0]*v[0]+v[1]*v[1]+v[2]*v[2]);
-}
-function normalize(v) {
-  let len = lengthVector(v);
-  if(len>0.00001) return scaleVector(v, 1/len);
-  return [0,0,0];
-}
-function cross(a,b) {
-  return [
-    a[1]*b[2] - a[2]*b[1],
-    a[2]*b[0] - a[0]*b[2],
-    a[0]*b[1] - a[1]*b[0]
-  ];
-}
-
-// Kamera-Position aus Winkel, Radius, Zielpunkt
-
-function getCamPos(tTheta=theta, tPhi=phi, tRadius=radius, tTarget=target) {
-  let sinPhi = Math.sin(tPhi);
-  let x = tRadius * sinPhi * Math.sin(tTheta);
-  let y = tRadius * Math.cos(tPhi);
-  let z = tRadius * sinPhi * Math.cos(tTheta);
-  return addVectors(tTarget, [x,y,z]);
-}
-
-// Lineares Interpolieren
-
-function lerp(a,b,t) {
-  return a + (b - a) * t;
-}
-
-function lerpVec(a,b,t) {
-  return [
-    lerp(a[0], b[0], t),
-    lerp(a[1], b[1], t),
-    lerp(a[2], b[2], t)
-  ];
-}
-
-// Render Loop
-
+// Render mit schnellerer Auto-Rotation
 function render(t) {
   gl.viewport(0, 0, canvas.width, canvas.height);
   gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-
-  const damping = 0.1;
-  theta += (targetTheta - theta) * damping;
-  phi += (targetPhi - phi) * damping;
-  radius += (targetRadius - radius) * damping;
-  target = lerpVec(target, targetPos, damping);
-
-  let camPos = getCamPos(theta, phi, radius, target);
-
-  gl.useProgram(program);
+  theta += 0.003; // schnellere Auto-Rotation
+  let camPos = getCamPos();
   gl.uniform2f(resLoc, canvas.width, canvas.height);
   gl.uniform1f(timeLoc, t * 0.001);
   gl.uniform3fv(camPosLoc, camPos);
   gl.uniform3fv(camTargetLoc, target);
-
   gl.drawArrays(gl.TRIANGLES, 0, 6);
   requestAnimationFrame(render);
 }
-
 requestAnimationFrame(render);
-
-// Kontextmenü bei Rechtsklick deaktivieren
-canvas.addEventListener('contextmenu', e => e.preventDefault());
 </script>
 </body>
 </html>
