--- a/index.html
+++ b/index.html
@@ -55,23 +55,23 @@ float fBox(vec3 p, vec3 b) {
   return length(max(d,0.0)) + min(max(d.x,max(d.y,d.z)),0.0);
 }
 float scene(vec3 p, float time) {
-  // Unterschiedliche Animationsgeschwindigkeiten und Amplituden
-  float baseX = 0.3 + 0.07 * sin(time * 0.15);
-  float baseY = 0.3 + 0.05 * cos(time * 0.12);
-  float baseZ = 0.3 + 0.06 * sin(time * 0.09);
-  float smallX = 0.1 + 0.02 * sin(time * 0.1 + 1.0);
-  float smallY = 0.1 + 0.025 * cos(time * 0.13 + 2.0);
-  float smallZ = 0.1 + 0.03 * sin(time * 0.17);
-  float sphereRadius = 0.4 + 0.05 * sin(time * 0.08 + 1.5);
-  float translation = 0.15 * sin(time * 0.07);
+  // Unterschiedliche Animationsgeschwindigkeiten und Amplituden (halbiert)
+  float baseX = 0.3 + 0.07 * sin(time * 0.075);
+  float baseY = 0.3 + 0.05 * cos(time * 0.06);
+  float baseZ = 0.3 + 0.06 * sin(time * 0.045);
+  float smallX = 0.1 + 0.02 * sin(time * 0.05 + 1.0);
+  float smallY = 0.1 + 0.025 * cos(time * 0.065 + 2.0);
+  float smallZ = 0.1 + 0.03 * sin(time * 0.085);
+  float sphereRadius = 0.4 + 0.05 * sin(time * 0.04 + 1.5);
+  float translation = 0.15 * sin(time * 0.035);
 
   p.z += translation;
   float v = 1.0;
   for (int i = 0; i < 6; i++) {
     vec2 absXY = abs(p.xy) - v;
     p = vec3(absXY, p.z);
-    p = rotationY(time * (0.05 + 0.03 * float(i))) * p;
-    p = rotationZ(time * (0.035 + 0.02 * float(i))) * p;
+    p = rotationY(time * (0.025 + 0.015 * float(i))) * p;
+    p = rotationZ(time * (0.0175 + 0.01 * float(i))) * p;
     v *= 0.9;
   }
 
