--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
 <meta charset="UTF-8" />
-<title>Shader mit metallischem Material und wandernden Pointlights</title>
+<title>Shader mit Orbit Controls (Maus & Touch)</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <style>
   html, body {
@@ -26,14 +26,16 @@
 <body>
 <canvas id="glcanvas"></canvas>
 
-<script id="vertex-shader" type="x-shader/x-vertex">
+<!-- Vertex Shader -->
+<script type="x-shader/x-vertex">
 attribute vec3 position;
 void main() {
   gl_Position = vec4(position, 1.0);
 }
 </script>
 
-<script id="fragment-shader" type="x-shader/x-fragment">
+<!-- Fragment Shader -->
+<script type="x-shader/x-fragment">
 precision highp float;
 uniform vec2 resolution;
 uniform float time;
@@ -89,6 +91,11 @@ vec3 getNormal(vec3 p, float time) {
   ));
 }
 
+// Zufallsfunktion basierend auf Position
+float rand(vec3 co) {
+  return fract(sin(dot(co ,vec3(12.9898,78.233, 45.164))) * 43758.5453);
+}
+
 void main() {
   vec2 uv = (gl_FragCoord.xy / resolution) * 2.0 - 1.0;
   uv.x *= resolution.x / resolution.y;
@@ -122,49 +129,45 @@ void main() {
     vec3 lighting = vec3(0.0);
 
     for(int i=0; i<NUM_LIGHTS; i++) {
+      // Basispositionen der Lichter auf einer Kugel um Ursprung, zufällig aber konstant pro Licht i
       float angle = float(i) * 6.2831853 / float(NUM_LIGHTS);
       float height = sin(float(i) * 12.345);
       vec3 basePos = vec3(cos(angle), height * 0.3, sin(angle)) * 1.2;
 
-      // Langsame Wanderung der Lichter (ursprünglich)
+      // Kleine zeitabhängige Wanderung
       basePos += vec3(
-        0.25 * sin(time * 2.0 + float(i)*3.1),
-        0.25 * cos(time * 2.5 + float(i)*2.2),
-        0.25 * sin(time * 1.8 + float(i)*1.7)
+        0.1 * sin(time * 0.7 + float(i)*3.1),
+        0.1 * cos(time * 0.6 + float(i)*2.2),
+        0.1 * sin(time * 0.5 + float(i)*1.7)
       );
 
       vec3 lightDir = basePos - p;
       float dist = length(lightDir);
       lightDir = normalize(lightDir);
 
-      float range = 1.5; // Ursprüngliche Reichweite
+      // Gedimmtes Licht mit geringer Reichweite (~1.5)
+      float range = 1.5;
       float attenuation = clamp(1.0 - dist/range, 0.0, 1.0);
-      attenuation = attenuation * attenuation;
+      attenuation = attenuation * attenuation; // quadratisch für weiche Abnahme
 
       float diff = max(dot(n, lightDir), 0.0);
 
-      // Leicht gedimmt, etwas höher als vorher, um metallisch sichtbar zu machen
-      lighting += lightColor * diff * attenuation * 0.4;
-
-      // Metallischer Glanz - Specular (Blinn-Phong)
-      vec3 viewDir = normalize(ro - p);
-      vec3 halfDir = normalize(lightDir + viewDir);
-      float spec = pow(max(dot(n, halfDir), 0.0), 64.0);
-      lighting += vec3(1.0) * spec * attenuation * 0.15; // kleiner Glanz
+      lighting += lightColor * diff * attenuation * 0.5; // 0.5 gedimmt
     }
 
-    // Ambient leicht erhöht
-    vec3 ambient = vec3(0.05);
+    // Einfaches Ambient
+    vec3 ambient = vec3(0.1);
 
     col = lighting + ambient;
 
-    // Gamma-Korrektur (sRGB)
+    // Gamma-Korrektur
     col = pow(col, vec3(0.4545));
   }
   gl_FragColor = vec4(col, 1.0);
 }
 </script>
 
+<!-- JavaScript -->
 <script>
 const canvas = document.getElementById("glcanvas");
 const gl = canvas.getContext("webgl");
@@ -189,11 +192,11 @@ function compileShader(type, source) {
   return shader;
 }
 
-const vertexShaderSource = document.getElementById("vertex-shader").textContent;
-const fragmentShaderSource = document.getElementById("fragment-shader").textContent;
+const vsSource = document.querySelector('script[type="x-shader/x-vertex"]').textContent;
+const fsSource = document.querySelector('script[type="x-shader/x-fragment"]').textContent;
 
-const vertexShader = compileShader(gl.VERTEX_SHADER, vertexShaderSource);
-const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fragmentShaderSource);
+const vertexShader = compileShader(gl.VERTEX_SHADER, vsSource);
+const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fsSource);
 
 const program = gl.createProgram();
 gl.attachShader(program, vertexShader);
@@ -204,107 +207,132 @@ if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
 }
 gl.useProgram(program);
 
-const posLoc = gl.getAttribLocation(program, "position");
-const resLoc = gl.getUniformLocation(program, "resolution");
-const timeLoc = gl.getUniformLocation(program, "time");
-const camPosLoc = gl.getUniformLocation(program, "camPos");
-const camTargetLoc = gl.getUniformLocation(program, "camTarget");
+const posLoc = gl.getAttribLocation(program, 'position');
+const resLoc = gl.getUniformLocation(program, 'resolution');
+const timeLoc = gl.getUniformLocation(program, 'time');
+const camPosLoc = gl.getUniformLocation(program, 'camPos');
+const camTargetLoc = gl.getUniformLocation(program, 'camTarget');
 
-const vertexBuffer = gl.createBuffer();
-gl.bindBuffer(gl.ARRAY_BUFFER, vertexBuffer);
-gl.bufferData(
-  gl.ARRAY_BUFFER,
-  new Float32Array([
-    -1, -1, 0,
-     1, -1, 0,
-    -1,  1, 0,
-    -1,  1, 0,
-     1, -1, 0,
-     1,  1, 0
-  ]),
-  gl.STATIC_DRAW
-);
+const buffer = gl.createBuffer();
+gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
+gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
+  -1,-1,0, 1,-1,0, -1,1,0,
+  -1,1,0, 1,-1,0, 1,1,0
+]), gl.STATIC_DRAW);
 gl.enableVertexAttribArray(posLoc);
 gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
 
-// Orbit Controls (Maus & Touch) mit Zoom
-let isDragging = false;
-let lastX, lastY;
-let theta = Math.PI / 4;
-let phi = Math.PI / 4;
+// Kamera
+let theta = Math.PI/4;
+let phi = Math.PI/4;
 let radius = 4.0;
-const target = [0, 0, 0];
+let target = [0, 0, 0];
 
-function clamp(x, minVal, maxVal) {
-  return Math.min(maxVal, Math.max(minVal, x));
-}
-
-canvas.addEventListener("mousedown", (e) => {
-  isDragging = true;
-  lastX = e.clientX;
-  lastY = e.clientY;
-});
-canvas.addEventListener("mouseup", () => (isDragging = false));
-canvas.addEventListener("mouseleave", () => (isDragging = false));
-canvas.addEventListener("mousemove", (e) => {
-  if (!isDragging) return;
-  let dx = (e.clientX - lastX) * 0.005;
-  let dy = (e.clientY - lastY) * 0.005;
-  lastX = e.clientX;
-  lastY = e.clientY;
-
-  theta += dx;
-  phi += dy;
-  phi = clamp(phi, 0.1, Math.PI - 0.1);
-});
-canvas.addEventListener("wheel", (e) => {
-  radius += e.deltaY * 0.01;
-  radius = clamp(radius, 1.5, 10.0);
-});
-
-canvas.addEventListener("touchstart", (e) => {
-  if(e.touches.length == 1){
-    isDragging = true;
-    lastX = e.touches[0].clientX;
-    lastY = e.touches[0].clientY;
-  }
-});
-canvas.addEventListener("touchend", (e) => {
-  if(e.touches.length == 0) isDragging = false;
-});
-canvas.addEventListener("touchmove", (e) => {
-  if(!isDragging || e.touches.length != 1) return;
-  let dx = (e.touches[0].clientX - lastX) * 0.005;
-  let dy = (e.touches[0].clientY - lastY) * 0.005;
-  lastX = e.touches[0].clientX;
-  lastY = e.touches[0].clientY;
-
-  theta += dx;
-  phi += dy;
-  phi = clamp(phi, 0.1, Math.PI - 0.1);
-  e.preventDefault();
-}, { passive:false });
+function subtractVectors(a,b){ return [a[0]-b[0], a[1]-b[1], a[2]-b[2]]; }
+function addVectors(a,b){ return [a[0]+b[0], a[1]+b[1], a[2]+b[2]]; }
+function scaleVector(v,s){ return [v[0]*s, v[1]*s, v[2]*s]; }
+function lengthVector(v){ return Math.sqrt(v[0]**2 + v[1]**2 + v[2]**2); }
+function normalize(v){ let l = lengthVector(v); return l > 0.00001 ? scaleVector(v, 1/l) : [0,0,0]; }
+function cross(a,b){ return [a[1]*b[2]-a[2]*b[1], a[2]*b[0]-a[0]*b[2], a[0]*b[1]-a[1]*b[0]]; }
 
 function getCamPos() {
-  return [
-    radius * Math.sin(phi) * Math.sin(theta),
-    radius * Math.cos(phi),
-    radius * Math.sin(phi) * Math.cos(theta),
-  ];
+  let sinPhi = Math.sin(phi);
+  let x = radius * sinPhi * Math.sin(theta);
+  let y = radius * Math.cos(phi);
+  let z = radius * sinPhi * Math.cos(theta);
+  return addVectors(target, [x, y, z]);
 }
 
-function render(timeMs) {
-  const time = timeMs * 0.001;
+let isDragging = false;
+let isPanning = false;
+let lastX = 0, lastY = 0;
+
+canvas.addEventListener("mousedown", e => {
+  isDragging = true;
+  isPanning = e.button === 2 || e.shiftKey;
+  lastX = e.clientX;
+  lastY = e.clientY;
+});
+canvas.addEventListener("mouseup", () => isDragging = false);
+canvas.addEventListener("mouseleave", () => isDragging = false);
+canvas.addEventListener("mousemove", e => {
+  if (!isDragging) return;
+  let dx = e.clientX - lastX;
+  let dy = e.clientY - lastY;
+  lastX = e.clientX;
+  lastY = e.clientY;
+  if (isPanning) {
+    const panSpeed = 0.005 * radius;
+    let forward = normalize(subtractVectors(target, getCamPos()));
+    let right = normalize(cross(forward, [0,1,0]));
+    let up = cross(right, forward);
+    target = addVectors(target,
+      addVectors(scaleVector(right, -dx * panSpeed), scaleVector(up, dy * panSpeed))
+    );
+  } else {
+    theta -= dx * 0.005;
+    phi -= dy * 0.005;
+    phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
+  }
+});
+canvas.addEventListener("wheel", e => {
+  e.preventDefault();
+  radius += e.deltaY * 0.0015;
+  radius = Math.max(0.5, Math.min(20, radius));
+});
+canvas.addEventListener("contextmenu", e => e.preventDefault());
+
+// Touch
+let touchMode = null;
+let touchStartDist = 0;
+canvas.addEventListener("touchstart", e => {
+  if (e.touches.length === 1) {
+    touchMode = "rotate";
+    lastX = e.touches[0].clientX;
+    lastY = e.touches[0].clientY;
+  } else if (e.touches.length === 2) {
+    touchMode = "zoom";
+    let dx = e.touches[0].clientX - e.touches[1].clientX;
+    let dy = e.touches[0].clientY - e.touches[1].clientY;
+    touchStartDist = Math.sqrt(dx * dx + dy * dy);
+  }
+});
+canvas.addEventListener("touchmove", e => {
+  e.preventDefault();
+  if (touchMode === "rotate" && e.touches.length === 1) {
+    let dx = e.touches[0].clientX - lastX;
+    let dy = e.touches[0].clientY - lastY;
+    lastX = e.touches[0].clientX;
+    lastY = e.touches[0].clientY;
+    theta -= dx * 0.005;
+    phi -= dy * 0.005;
+    phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
+  } else if (touchMode === "zoom" && e.touches.length === 2) {
+    let dx = e.touches[0].clientX - e.touches[1].clientX;
+    let dy = e.touches[0].clientY - e.touches[1].clientY;
+    let dist = Math.sqrt(dx * dx + dy * dy);
+    let delta = dist - touchStartDist;
+    radius -= delta * 0.01;
+    radius = Math.max(0.5, Math.min(20, radius));
+    touchStartDist = dist;
+  }
+});
+canvas.addEventListener("touchend", () => touchMode = null);
+
+// Render mit schnellerer Auto-Rotation
+function render(t) {
+  gl.viewport(0, 0, canvas.width, canvas.height);
+  gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+  theta += 0.003; // schnellere Auto-Rotation
+  let camPos = getCamPos();
   gl.uniform2f(resLoc, canvas.width, canvas.height);
-  gl.uniform1f(timeLoc, time);
-  const camPos = getCamPos();
+  gl.uniform1f(timeLoc, t * 0.001);
   gl.uniform3fv(camPosLoc, camPos);
   gl.uniform3fv(camTargetLoc, target);
-
   gl.drawArrays(gl.TRIANGLES, 0, 6);
   requestAnimationFrame(render);
 }
 requestAnimationFrame(render);
 </script>
 </body>
-  </html>
+</html>
